--- a/gosfin.html
+++ b/gosfin.html
@@ -23,10 +23,12 @@ authors: Составил <a href="https://begtin.tech" target="_blank">Иван
 
 
 <div class="container pb-2">
-  
+
+  <!-- EDIT HERE. Replace gosfin -->
   {% if site.gosfin.size > 0 %}
 
     <div class="row">
+      <!-- EDIT HERE. Replace gosfin -->
       {% assign sortedsections = site.gosfin %}
       {% for section in sortedsections %}
       <div class="col col-sm-6 col-md-4 col-lg-3 py-2 mb-3">
